--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <body>
     <div class="marco">
         <div class="container-foto">
-            <img class="foto" src="yo.jpg" alt="">
+            <img class="foto" src="img/yo.jpg" alt="">
         </div>
         <div class="container-estados">
             <div class="estados">
-                <img class="icon" src="icono1.png" alt="">
+                <img class="icon" src="img/icono1.png" alt="">
             </div>
             <div class="estados">
-                <img class="icon" src="icono2.png" alt="">
+                <img class="icon" src="img/icono2.png" alt="">
             </div>
             <div class="estados">
-                <img class="icon" src="icono3.png" alt="">
+                <img class="icon" src="img/icono3.png" alt="">
             </div>
         </div>
     </div>
     <div class="buscar">
         <div class="barra">
             <div class="barra-icon">
-                <img src="lupa.png" alt="">
+                <img src="img/lupa.png" alt="">
             </div>
             <input class="buscar-contactos" type="text" placeholder="Busca un chat o inicia uno nuevo">
         </div>
